Comit PC Trabajo 15 01 2021

--- a/app/Modulos/Acceso/inicio/inicio.html
+++ b/app/Modulos/Acceso/inicio/inicio.html
@@ -77,6 +77,20 @@
                             <div class="card-categoria-sub-titulo">
                                 djkh fhasjkd jkasdh jkhd jash dlas hdkls djas djlasdsld
                             </div>
+                            <div style="margin-top: 10px">
+                                <div class="col-sm-12"  style="padding: 0">
+                                    <button class="buttonIgnorar"
+                                            ng-click="inicioCtrl.irADetalleProducto(loMasVendido)">
+                                        <span>{{"Detalle"}}</span>
+                                    </button>
+                                </div>
+                                <div class="col-sm-12" style="padding: 0; margin-top: 10px">
+                                    <button class="buttonAceptar"
+                                            ng-click="inicioCtrl.irADetalleVenta(loMasVendido)">
+                                        <span>{{"Comprar"}}</span>
+                                    </button>
+                                </div>
+                            </div>
                         </div>
 
                     </div>
@@ -86,8 +100,7 @@
 
     </div>
     <div class="row" style="margin-top: 2%;">
-        <div class="col-sm-12"
-             style="margin-top: 50px; background: #eaeaea; padding-bottom: 7%">
+        <div class="col-sm-12 cuadro-texto-footer" >
             <div class="col-sm-12"
                  style="text-align: right; padding: 5% 2% 3% 0 ">
                 <div class="col-sm-9">&nbsp;&nbsp;&nbsp;</div>
@@ -108,49 +121,49 @@
             </div>
             <div class="col-sm-3 col-sm-offset-2">
                 <div class="col-sm-12">
-                    <b>Acerca de Nosotros</b>
+                    <b class="texto-politicas-titulo">Acerca de Nosotros</b>
                 </div>
-                <div class="col-sm-12 caja-texto-footer">
+                <div class="col-sm-12 caja-texto-footer texto-politicas">
                     Quienes Somos
                 </div>
-                <div class="col-sm-12 caja-texto-footer">
+                <div class="col-sm-12 caja-texto-footer texto-politicas">
                     Oficinas
                 </div>
-                <div class="col-sm-12 caja-texto-footer">
+                <div class="col-sm-12 caja-texto-footer texto-politicas">
                     Tiendas
                 </div>
             </div>
             <div class="col-sm-3" >
                 <div class="col-sm-12">
-                    <b>Ayuda al Cliente</b>
+                    <b class="texto-politicas-titulo">Ayuda al Cliente</b>
                 </div>
-                <div class="col-sm-12 caja-texto-footer">
+                <div class="col-sm-12 caja-texto-footer texto-politicas">
                     Guia de Compras
                 </div>
-                <div class="col-sm-12 caja-texto-footer">
+                <div class="col-sm-12 caja-texto-footer texto-politicas">
                     Pago
                 </div>
-                <div class="col-sm-12 caja-texto-footer">
+                <div class="col-sm-12 caja-texto-footer texto-politicas">
                     Envio
                 </div>
-                <div class="col-sm-12 caja-texto-footer">
+                <div class="col-sm-12 caja-texto-footer texto-politicas">
                     Devoluciones
                 </div>
-                <div class="col-sm-12 caja-texto-footer">
+                <div class="col-sm-12 caja-texto-footer texto-politicas">
                     Cambios
                 </div>
             </div>
             <div class="col-sm-3">
                 <div class="col-sm-12 caja-texto-footer">
-                    <b>Politicas</b>
+                    <b class="texto-politicas-titulo">Politicas</b>
                 </div>
-                <div class="col-sm-12 caja-texto-footer">
+                <div class="col-sm-12 caja-texto-footer texto-politicas">
                     Politica de Privacidad
                 </div>
-                <div class="col-sm-12 caja-texto-footer">
+                <div class="col-sm-12 caja-texto-footer texto-politicas">
                     Politica Cookies
                 </div>
-                <div class="col-sm-12 caja-texto-footer">
+                <div class="col-sm-12 caja-texto-footer texto-politicas">
                     Aviso Copyright
                 </div>
             </div>
