--- a/app/index.html
+++ b/app/index.html
@@ -87,11 +87,16 @@
 
     <!-- Modulo: Acceso -->
     <script src="Modulos/Acceso/inicio/inicio.controller.js"></script>
+
     <script src="Modulos/MenuSuperior/menuSuperior.controller.js"></script>
+
     <script src="Modulos/AdministracionDatos/AdministracionDatos.controller.js"></script>
     <script src="Modulos/AdministracionDatos/Usuario/usuario.controller.js"></script>
     <script src="Modulos/AdministracionDatos/Categoria/Categoria.controller.js"></script>
     <script src="Modulos/AdministracionDatos/Promocion/Promocion.controller.js"></script>
+
+    <script src="Modulos/Ventas/Productos/Productos.controller.js"></script>
+    <script src="Modulos/Ventas/Venta/Venta.controller.js"></script>
 
     <div ng-include="'Modulos/MenuSuperior/menuSuperior.html'"></div>
 
