--- a/app/Modulos/MenuSuperior/menuSuperior.html
+++ b/app/Modulos/MenuSuperior/menuSuperior.html
@@ -9,9 +9,18 @@
             </div>
 
             <div class="col-sm-2 pull-right" style="margin-top: 15px; text-align: center">
-                <div class="col-sm-12" style="color: black">
-                    Iniciar Sesión&nbsp;&nbsp;
-                    <i class="ixs ixs-usuario" style="font-size: 20px;color: #274488;"></i>
+
+                <div class="dropdown">
+                    <div class="dropbtn">
+                        Iniciar Sesión&nbsp;&nbsp;
+                        <i class="ixs ixs-usuario" style="font-size: 20px;color: #274488;"></i>
+                    </div>
+                    <div class="dropdown-content">
+                        <a><i class="ixs ixs-usuario" style="font-size: 15px;color: #274488;"></i> JUAN NUTE</a>
+                        <a><i class="ixs ixs-usuario" style="font-size: 15px;color: #274488;"></i> CORREO ELECTRONICO</a>
+                        <a><i class="ixs ixs-usuario" style="font-size: 15px;color: #274488;"></i> TIPO DE USUARIO</a>
+                        <a><i class="ixs ixs-usuario" style="font-size: 15px;color: #274488;"></i> Administración de Pagina </a>
+                    </div>
                 </div>
             </div>
             <div class="col-sm-3 pull-right" style="margin-top: 15px">
