--- a/app/Modulos/AdministracionDatos/AdministracionDatos.html
+++ b/app/Modulos/AdministracionDatos/AdministracionDatos.html
@@ -39,3 +39,15 @@
         </div>
     </div>
 </div>
+
+<div class="row">
+    <div class="col-sm-12">
+        <div class="footer-login-simple">
+            <div style="color: white; width: 100%; text-align: center; padding-top: 7px;">
+                <div>
+                    Exclusividad de Distribución JC 2021
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
