--- a/app/Modulos/Ventas/Productos/Productos.html
+++ b/app/Modulos/Ventas/Productos/Productos.html
@@ -1,31 +1,37 @@
 <div class="row">
     <div class="col-sm-12" style="margin-top: 50px">
-        <div class="col-sm-12 text-center wrapper">
+        <div class="col-sm-11 col-sm-offset-1 text-center wrapper">
             <p class="slogan"><span class="span-titulos">PRODUCTOS</span></p>
         </div>
-        <div class="col-sm-2"
+        <div class="col-sm-3"
              style="margin-top: 15px; ">
-            kjskjahdashdkjasdh <br>
-            kjskjahdashdkjasdh <br>
-            kjskjahdashdkjasdh <br>
-            kjskjahdashdkjasdh <br>
-            kjskjahdashdkjasdh <br>
-            kjskjahdashdkjasdh <br>
-            kjskjahdashdkjasdh <br>
-            kjskjahdashdkjasdh <br>
-            kjskjahdashdkjasdh <br>
-            kjskjahdashdkjasdh <br>
-            kjskjahdashdkjasdh <br>
-            kjskjahdashdkjasdh <br>
-            kjskjahdashdkjasdh <br>
-            kjskjahdashdkjasdh <br>
-            kjskjahdashdkjasdh <br>
-            kjskjahdashdkjasdh <br>
-            kjskjahdashdkjasdh <br>
-            kjskjahdashdkjasdh <br>
-            kjskjahdashdkjasdh <br>
+            <div class="col-sm-12 titulo-compra-iniciar-session" style="padding: 0">
+                <div style="padding: 3%; text-align: center; font-size: 22px; letter-spacing: 3px;">
+                    BUSCAR
+                </div>
+            </div>
+            <div class="col-sm-12"
+                 style="padding: 0; border: 1px solid #d4cfcf;margin-top: -2px;">
+                <div class="row" style="padding: 5%;">
+                    <div class="col-sm-12">
+                        INPUTS DE BUSQUEDA
+                    </div>
+                </div>
+
+                <div class="col-sm-12"
+                     style="margin-bottom: 5px">
+                    <div style="height: 35px; font-size: 15px;">
+                        <button class="buttonAceptar"
+                                ng-click="ventaCtrl.buscar()">
+                            <span>{{"BUSCAR"}}</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="col-sm-8" style="margin-top: 15px">
+        <div class="col-sm-7"
+             ng-if="productoCtrl.producto"
+             style="margin-top: 15px">
             <div style="height: 500px; padding: 5%">
                 <div>
                     <div class="card-categoria-titulo" style="text-align: center">
@@ -35,12 +41,60 @@
                 <div>
                     <img src="{{productoCtrl.producto.src}}" style="width: 100%; height: 400px">
                 </div>
-                <div class="card-lomas-vendido">
-                    <div class="card-categoria-sub-titulo">
+                <div class="col-sm-12" style="padding: 0">
+                    <div class="col-sm-4 pull-right"
+                         style="padding-right: 0; margin-top: 10px">
+                        <div style="height: 30px; font-size: 13px;">
+                            <button class="buttonAceptar"
+                                    ng-click="ventaCtrl.irComprarProducto(productoCtrl.producto)">
+                                <span>{{"COMPRAR"}}</span>
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-12 card-categoria-sub-titulo">
                         djkh fhasjkd jkasdh jkhd jash dlas hdkls djas djlasdsld
                     </div>
                 </div>
 
+            </div>
+        </div>
+        <div class="col-sm-8" ng-if="!productoCtrl.producto">
+            <div class="col-sm-12">
+                <div class="col-sm-4" style="margin: 15px 0;"
+                     ng-repeat="prodcts in productoCtrl.productosList">
+                    <div style="height: 210px; padding: 5%">
+                        <div>
+                            <div class="card-categoria-titulo" style="text-align: center">
+                                TITULO
+                            </div>
+                        </div>
+                        <div>
+                            <img src="{{prodcts.src}}"
+                                 style="width: 100%; height: 130px">
+                        </div>
+                        <div class="card-lomas-vendido">
+                            <div class="card-categoria-sub-titulo">
+                                djkh fhasjkd jkasdh jkhd jash dlas hdkls djas djlasdsld
+                            </div>
+                            <div style="margin-top: 10px">
+                                <div class="col-sm-12"  style="padding: 0">
+                                    <button class="buttonIgnorar"
+                                            ng-click="productoCtrl.irADetalleProducto(prodcts)">
+                                        <span>{{"Detalle"}}</span>
+                                    </button>
+                                </div>
+                                <div class="col-sm-12" style="padding: 0; margin-top: 10px">
+                                    <button class="buttonAceptar"
+                                            ng-click="productoCtrl.irADetalleVenta(prodcts)">
+                                        <span>{{"Comprar"}}</span>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
             </div>
         </div>
     </div>
