--- a/app/Modulos/Ventas/Venta/modals/mdlRegistroVenta.html
+++ b/app/Modulos/Ventas/Venta/modals/mdlRegistroVenta.html
@@ -1,15 +1,16 @@
-<div class="modal fade" id="usuarioA" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+<div class="modal fade" id="mdlRegistroVenta" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
      aria-hidden="true">
-    <div class="modal-dialog" style="width: 75%">
+    <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 <h4 class="modal-title" id="myModalLabel">
-                    <i class="ixs ixs-eliminar"></i> Agregar Usuario
+                    <i class="ixs ixs-eliminar"></i> Login
                 </h4>
             </div>
             <div class="modal-body">
                 <form class="form-inline" role="form" name="form" novalidate>
+
                     <div class="row">
                         <div class="col-sm-3">
                             <label>Nombre de Usuario</label>
@@ -176,14 +177,15 @@
                         </div>
                     </div>
 
+
                     <div class="modal-footer" ng-if="form.$valid">
                         <div style="display: inline-block; margin-left: 15px;">
                             <div style="display: inline-block;">
-                                <label>{{'Confirmar'}}</label>
+                                <label>Confirmar</label>
                             </div>
                             <div style="display: inline-block; margin-left: 5px;">
                                 <button type="button"
-                                        ng-click="usuarioCtrl.agregarUsuario()"
+                                        ng-click="promocionCtrl.agregarPromociones()"
                                         data-dismiss="modal"
                                         class="btn btn-success">
                                     <i class="ixs ixs-palomita">
